--- a/app/static/styles-dashboard.css
+++ b/app/static/styles-dashboard.css
@@ -113,7 +113,8 @@ body {
 .zone-2 {
     display: flex;
     flex: 1;
-    min-width: 700px;
+    flex-direction: column;
+    min-width: 800px;
     margin: 0.25vw;
     padding: 1rem;
     overflow-y: auto;
@@ -133,28 +134,30 @@ body {
     border: 5px solid #4a4a4a;
 }
 .decks-zone {
-    position: absolute;
-    top: 15%;
-    width: 100%; 
-    height: 80%;
-    margin-top: 1vh;
+    width: 100%;
+    max-width: 1000px;
+    height: 100%;
+    padding: 20px;
+    /* border: 5px dashed black; */
 }
 .deck-container {
-    position: relative;
+    display: flex;
     width: 100%;
     height: 10%;
+    min-height: 70px;
     max-height: 100px;
     margin-bottom: 1%;
+    align-items: center;
+    /* border: 5px dashed black; */
 }
 .deck {
     display: flex;
-    position: absolute;
-    top: 0;
-    left: 0;
     width: 50%;
     height: 100%;
+    margin-right: 20px;
+    text-decoration: none;
+    justify-content: center;
     align-items: center;
-    margin-left: 5%;
     background-color: #7680d3;
     border-radius: 20px;
     z-index: 5;
@@ -164,49 +167,43 @@ body {
 }
 .deck-content {
     display: flex;
-    position: absolute;
-    top: 50%;
-    left: 50%;
     width: 90%;
     height: 70%;
-    transform: translate(-50%, -50%);
-    border-radius: 20px;
-    color: black;
-    background-color: white;
-    align-items: center;
     padding-left: 5%;
     padding-right: 5%;
+    color: black;
+    align-items: center;
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
+    background-color: white;
+    border-radius: 20px;
 }
 .deck-button {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
+    display: flex;
     width: 20%;
+    height: 80%;
     color: black;
-    text-align: center;
-    line-height: 2.5;
-    font-size: 1cqw;
+    justify-content: center;
+    align-items: center;
+    font-size: 1rem;
     font-weight: bold;
     background-color: white;
-    border: 0.5cqw solid black;
+    border: 0.5rem solid black;
     border-radius: 7px;
     cursor: pointer;
     z-index: 7;
 }
 .deck-button--rename {
-    left: 57%;
+    margin-right: 10px;
     color: #036333;
     border-color: #00dd6f;
-    border-left-width: 4cqw;
+    border-left-width: 4rem;
 }
 .deck-button--delete {
-    left: 78%;
     color: #ae0000;
     border-color: #da2201;
-    border-right-width: 4cqw;
+    border-right-width: 4rem;
 }
 .deck-button:hover {
     opacity: 0.75;
@@ -391,9 +388,9 @@ body {
     opacity: 0.3;
     z-index: 10;
 }
-.zone-2 > * {
+/* .zone-2 > * {
     display: none;
 }
 .your-decks {
     display: flex;
-}
+} */
