--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -46,6 +46,7 @@
                         <div id="deck-id-{{  deck.id  }}-container" class="deck-container">
                             <a class="deck" href="{{ url_for('view_deck', deck_id=deck.id)  }}">
                                 <div id="deck-id-{{  deck.id  }}" class="deck-content" title="{{  deck.name  }}">{{ deck.name }}</div>
+                                <div class="playbutton"></div>
                             </a>
                             <div class="deck-background-1"></div>
                             <div class="deck-background-2"></div>
