--- a/app/static/styles-deck.css
+++ b/app/static/styles-deck.css
@@ -249,66 +249,70 @@ body {
 }
 .zone-3-2 {
     display: flex;
-    width: 50%;
-    height: 65vh;
-    padding-top: 1vh;
+    flex: 1;
+    flex-direction: column;
+    padding-bottom: 3rem;
     background-color: white;
-    border: 0.25cqw solid #008040;
-    border-radius: 1vh;
+    border: 0.3rem solid #008040;
+    border-radius: 0.5rem;
     z-index: 2;
     /* border: 5px dashed black; */
 }
 #edit-panel {
     display: none;
-    position: absolute;
-    top: 0;
     width: 100%;
     height: 100%;
-    resize: none;
+    padding: 2rem;
 }
 .label-1 {
     display: flex;
-    margin: 2vh 2vh 1vh 2vh;
-    font-size: 2vh;
+    margin-bottom: 1%;
+    font-size: 1.2rem;
 }
 #edit-question {
     display: flex;
-    width: calc(100% - 10vh);
+    width: 90%;
     height: 10vh;
-    padding: 0.5vh;
-    margin-left: 2vh;
-    margin-bottom: 4vh;
+    min-height: 100px;
+    padding: 0.5%;
+    margin-bottom: 2.4rem;
     font-family: sans-serif;
     resize: none;
 }
 .label-2 {
     display: flex;
-    margin-left: 2vh;
-    margin-bottom: 1vh;
-    font-size: 2vh;
+    margin-bottom: 1%;
+    font-size: 1.2rem;
 }
 #edit-answer {
     display: flex;
-    width: calc(100% - 10vh);
-    height: 15vh;
-    padding: 0.5vh;
-    margin-left: 2vh;
-    margin-bottom: 4vh;
+    width: 90%;
+    height: 10vh;
+    min-height: 100px;
+    /* min-height: 150px;
+    max-height: 150px; */
+    padding: 0.5%;
+    margin-bottom: 2.4rem;
     font-family: sans-serif;
     resize: none;
 }
+.edit-buttons-container {
+    display: flex;
+    flex-direction: row;
+    width: 60%;
+    gap: 0.5rem;
+}
 .save-changes {
-    display: inline-flex;
-    width: 25vh;
-    margin-left: 2vh;
-    padding: 1vh;
+    display: flex;
+    flex: 1;
+    padding: 0.5rem;
     justify-content: center;
     color: #036333;
-    font-size: 1cqw;
+    font-size: 1rem;
     background-color: white;
-    border: 0.5cqw solid #00a251;
-    border-left-width: 3cqw;
-    border-radius: 0.5cqw;
+    border: 0.5rem solid #00a251;
+    border-left-width: 3rem;
+    border-radius: 0.5rem;
     cursor: pointer;
 }
 .save-changes:hover {
@@ -316,29 +320,27 @@ body {
     border-color: #018342;
 }
 #delete-card {
-    display: inline-flex;
-    width: 25vh;
-    padding: 1vh;
+    display: flex;
+    flex: 1;
+    padding: 0.5rem;
     justify-content: center;
     color: #cd3333;
-    font-size: 1cqw;
+    font-size: 1rem;
     background-color: white;
-    border: 0.5cqw solid #ef3b3b;
-    border-right-width: 3cqw;
-    border-radius: 0.5cqw;
+    border: 0.5rem solid #ef3b3b;
+    border-right-width: 3rem;
+    border-radius: 0.5rem;
     cursor: pointer;
 }
 #delete-card:hover {
     font-weight: bold;
-    border-color: #ef3b3b;
+    border-color: rgb(205, 51, 51);
 }
 #update-message {
     display: none;
-    position: absolute;
-    bottom: 5vh;
     width: 100%;
-    padding: 1cqw;
-    font-size: 2cqw;
+    padding: 1rem;
+    font-size: 2rem;
     color: white;
     background-color: #008040;
     border: 0px solid black;
@@ -353,8 +355,8 @@ body {
     top: 40%;
     left: 65%;
     width: 20%;
-    height: 25vh;
-    min-height: 60px;
+    max-height: 25%;
+    min-height: 25%;
     justify-content: center;
     color: black;
     background-color: white;
